# routes/admin.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+const adminController = require("../controllers/adminController");
+
+// Teacher and store register by admin
+router.post('/adminRegister', adminController.registerUserByAdmin);
+
+module.exports = router;
